add 'user_options' table add 'UrlHelper' class add 'AuthBehavior' class add user directory move 'img' column to 'user_options' table rename dir 'avatar' to 'user' fix styles fix 'Auth' class fix 'User' class fix 'Signin' class fix 'Avatar' class

--- a/web/asset-auth/css/auth-style.css
+++ b/web/asset-auth/css/auth-style.css
@@ -1,4 +1,7 @@
-html, body * { box-sizing: border-box; font-family: 'Open Sans', sans-serif; }
+html, body * {
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+}
 
 body {
     background:
@@ -16,8 +19,12 @@ body {
 
 .container {
     width: 100%;
-    padding-top: 60px;
-    padding-bottom: 100px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /*    padding-top: 60px;
+        padding-bottom: 100px;*/
 }
 
 .frame {
