--- a/web/asset-auth/css/auth-style.css
+++ b/web/asset-auth/css/auth-style.css
@@ -98,40 +98,6 @@ li {
     border-bottom: solid 2px #1059FF;
 }
 
-/*.signin-active a {
-    padding-bottom: 10px;
-    color: #ffffff;
-    text-decoration: none;
-    border-bottom: solid 2px #1059FF;
-    -webkit-transition: all .25s ease;
-    transition: all .25s ease;
-    cursor: pointer;
-}
-
-.signin-inactive a {
-    padding-bottom: 0;
-    color: rgba(255,255,255,.3);
-    text-decoration: none;
-    border-bottom: none;
-    cursor: pointer;
-}
-
-.signup-active a {
-    cursor: pointer;
-    color: #ffffff;
-    text-decoration: none;
-    border-bottom: solid 2px #1059FF;
-    padding-bottom: 10px;
-}
-
-.signup-inactive a {
-    cursor: pointer;
-    color: rgba(255,255,255,.3);
-    text-decoration: none;
-    -webkit-transition: all .25s ease;
-    transition: all .25s ease;
-}*/
-
 .form-signin {
     width: 430px;
     height: 375px;
@@ -594,41 +560,6 @@ a.btn-goback:hover {
     border-radius: 20px;
     transition: .3s;
 }
-
-/*svg {
-  width: 100%;
-  height: 100%;
+.signin-avatar{
+    top: 0;
 }
-
-path {
-  stroke-dasharray: 99.47578430175781;
-  stroke-dashoffset: -99.47578430175781;
-  fill: transparent;
-}
-
-svg.animate path {
-  animation: 1.7s ease forwards draw;
-  opacity:1;
-}
-
-@keyframes draw {
-  0% {
-    opacity: 1;
-    stroke-dashoffset: -99.47578430175781;
-    fill: transparent;
-    transform: translateY(0);
-  }
-  
-  50% {
-    stroke-dashoffset: 0;
-    fill: transparent;
-  }
-  
-  100% {
-    stroke-dashoffset: 0;
-    fill: #3da35a;
-    opacity: 1;
-    transform: translateY(0);
-  }
-
-}*/
