--- a/web/asset-auth/css/auth-style.css
+++ b/web/asset-auth/css/auth-style.css
@@ -98,7 +98,7 @@ li {
     border-bottom: solid 2px #1059FF;
 }
 
-.form-signin {
+.form-signin, .form-recovery {
     width: 430px;
     height: 375px;
     font-size: 16px;
@@ -187,7 +187,7 @@ li {
     fill: rgba(255,255,255,.03);
 }
 
-.form-signin input, .form-signup input {
+.form-signin input, .form-signup input, .form-recovery input {
     color: #ffffff;
     font-size: 13px;
 }
@@ -217,11 +217,11 @@ label {
     outline: none;
 }
 
-.form-signin input, textarea, .form-signup input, textarea {
+.form-signin input, textarea, .form-signup input, .form-recovery input {
     transition: background .5s ease;
 }
 
-.form-signin input:focus, textarea:focus, .form-signup input:focus, textarea:focus {
+.form-signin input:focus, textarea:focus, .form-signup input:focus, .form-recovery input:focus {
     background: rgba(255,255,255,.3);
     border: none; 
     padding-right: 40px;
@@ -562,4 +562,10 @@ a.btn-goback:hover {
 }
 .signin-avatar{
     top: 0;
+}
+.hint{
+    color: #fff;
+}
+.success-top{
+    top: -360px;
 }
